src/css/views/send.css
.view.send {
	overflow: hidden;
	padding: 0;
}
.view.send .scoreboard {
	position: absolute;
	left: 0;
	top: 0;
	width: 100%;
	height: 7rem;
	z-index: 50;
	background: #111;
}
.view.send .scoreboard table {
	width: 100%;
	text-align: center;
	border-spacing: .1rem;
}
.view.send .scoreboard th,
.view.send .scoreboard td {
	height: 1.6rem;
	line-height: 1.6rem;
	padding: 0 .2rem;
}
.view.send .scoreboard .scoreboard-1st,
.view.send .scoreboard .scoreboard-4th {
	width: 50%;
}
.view.send .scoreboard .scoreboard-1st {
	font-size: 1.1rem;
}
.view.send .scoreboard .scoreboard-4th {
	height: 1.4rem;
    line-height: 1.4rem;
}
.view.send .scoreboard .scoreboard-2nd,
.view.send .scoreboard .scoreboard-3rd {
	width: 16.666666%;
}
.view.send .scoreboard .scoreboard-2nd {
	background-color: #222;
	background-size: 1.2rem;
	background-position: center;
	background-repeat: no-repeat;
}
.view.send .scoreboard .scoreboard-2nd.pending { background-image: url('../images/pending.svg') }
.view.send .scoreboard .scoreboard-2nd.invalid { background-image: url('../images/invalid.svg') }
.view.send .scoreboard .scoreboard-2nd.confirmed { background-image: url('../images/confirmed.svg') }
.view.send .scoreboard .scoreboard-3rd {
	width: 16.666666%;
	height: 2rem;
	line-height: 2rem;
	font-family: 'Courier New';
	font-size: 1.4rem;
	font-weight: 700;
}
.view.send .scoreboard .scoreboard-1st.payments {
	background-color: rgba(52,112,247,0.4);
}
.view.send .scoreboard .scoreboard-4th.payments {
	color: rgba(52,112,247,0.7);
}
.view.send .scoreboard .scoreboard-1st.double-spends {
	background-color: rgba(255,0,0,0.4);
}
.view.send .scoreboard .scoreboard-4th.double-spends {
	color: rgba(255,0,0,0.7);
}
.view.send .scoreboard .scoreboard-3rd.invalid {
	color: rgba(255,0,0,.6);
}
.view.send .scoreboard .scoreboard-3rd.pending {
	color: rgba(255,255,255,.6);
}
.view.send .scoreboard .scoreboard-3rd.confirmed {
	color: rgba(0,128,0,.75);
}
.view.send .scoreboard .sum {
	font-weight: 700;
}
.view.send .scoreboard .symbol {
	font-weight: 100;
	padding-left: .5rem;
}
.view.send .balance {
	position: absolute;
	left: 0;
	top: 7rem;
	height: 2.5rem;
	width: 100%;
	z-index: 50;
	background: #111;
}
.view.send.has-pending-balance .balance {
	height: 3.9rem;
}
.view.send .balance-pending,
.view.send .balance-total {
	width: 100%;
	text-align: center;
}
.view.send .balance-total {
	height: 2.5rem;
	line-height: 2.2rem;
	font-size: 1.2rem;
}
.view.send .balance-pending {
	display: none;
	height: 1.4rem;
	line-height: 1.4rem;
	font-size: 1rem;
	font-weight: 100;
	opacity: .6;
}
.view.send.has-pending-balance .balance-pending {
	display: block;
}
.view.send .balance-value {
	display: inline;
	font-weight: 700;
	padding-right: .25rem;
}
.view.send .balance-symbol {
	display: inline;
	font-weight: 100;
	padding-left: .25rem;
}
.view.send .balance-refresh {
	display: inline-block;
	vertical-align: middle;
	left: .4rem;
	width: 1.5rem;
	height: 1.5rem;
	border-radius: .6rem;
	opacity: .7;
	background-image: url(../images/cycle.svg);
	background-size: .9rem;
	background-repeat: no-repeat;
	background-position: 50%;
}
.view.send .balance-pending:after {
	position: relative;
	left: .25rem;
	display: inline-block;
	vertical-align: middle;
	content: ' ';
	width: 1rem;
	height: 1rem;
	background: transparent url('../images/pending.svg') 0 0 no-repeat;
	background-size: 1rem;
}
.view.send .balance-pending .balance-value {
	font-style: italic;
	font-weight: 100;
	padding-right: 0;
}
.view.send .scoreboard-and-balance {
	position: absolute;
	left: 0;
	top: 0;
	z-index: 40;
	width: 100%;
	height: 10rem;
	background: #111;
}
.view.send.has-pending-balance .scoreboard-and-balance {
	height: 11.5rem;
}
.view.send .form {
	position: absolute;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	overflow: auto;
	box-sizing: border-box;
	padding: 10rem 1rem 9rem 1rem;
}
.view.send.has-pending-balance .form {
	padding-top: 11.5rem;
}
.view.send .form-field,
.view.send .form-label {
	box-sizing: border-box;
}
.view.send .form-input[type="text"],
.view.send .form-input[type="password"],
.view.send .form-input[type="number"] {
	height: 1.4rem;
	line-height: 1.4rem;
	border-top: .1rem solid #222;
	padding: .2rem .4rem;
}
.view.send input[name="address"] {
	font-family: 'Courier';
	letter-spacing: .1rem;
}
.view.send .button.secondary-control {
	background-position: center center;
	background-repeat: no-repeat;
	background-size: 2.4rem;
	background-repeat: no-repeat;
}
.view.send .button.secondary-control.payment:before {
	background-image: url('../images/send.svg');
}
.view.send .button.secondary-control.double-spend:before {
	background-image: url('../images/wink.svg');
}
.view.send .button.secondary-control.reset:before {
	background-image: url('../images/cancel.svg');
}
.view.send .button.secondary-control.payment {
	background-color: rgba(52,112,247,0.8);
}
.view.send .button.secondary-control.double-spend {
	background-color: rgba(255,0,0,0.8);
}
.view.send .button.secondary-control.reset {
	background-color: #333;
}
.view.send .form-row--amount .form-field.has-1-actions {
	padding-right: 7.6rem;
}
.view.send .form-row--feeRate .form-field.has-1-actions {
	padding-right: 2rem;
}
.view.send .form-row--amount .currency-symbol {
	position: absolute;
	right: 4.6rem;
	top: 0;
	width: 3rem;
	color: #888;
	font-size: 1rem;
	text-align: center;
	line-height: 1.6rem;
}
.view.send .form-field-action.select-all {
	width: 4rem;
	height: 100%;
	line-height: 1.6rem;
	text-align: center;
	text-transform: lowercase;
	padding: 0;
	box-sizing: border-box;
	background-size: initial;
	background-image: none;
}
.view.send .form-switch {
	width: 2.2rem;
	height: 1.2rem;
}
.view.send .form-switch-slider {
	border-radius: 1rem;
}
.view.send .form-switch-slider:before {
	width: 1rem;
	height: 1rem;
	left: .2rem;
	top: .1rem;
}
.view.send input:checked + .form-switch-slider:before {
	-webkit-transform: translateX(.8rem);
	transform: translateX(.8rem);
}
.view.send .form-row-type--checkbox {
	min-height: 1.5rem;
	padding-bottom: .2rem;
}
.view.send .form-row + .form-row.form-row--feeRate {
	margin-top: 1.25rem;
}
.view.send .form-row + .form-row.form-row--autoBroadcastDoubleSpend,
.view.send .form-row + .form-row.form-row--autoBroadcastDoubleSpendDelay {
	margin-top: .5rem;
}
.view.send .form-row-type--checkbox .form-label {
	height: 1.2rem;
	opacity: .4;
	text-align: left;
	padding-left: .8rem;
	transition: opacity .4s ease-in-out;
	margin: 0;
}
.view.send .form-row-type--checkbox.checked .form-label {
	opacity: 1;
}
.view.send .form-row-type--checkbox .form-field {
	height: 1.2rem;
	line-height: 1.2rem;
	text-align: right;
	margin: 0;
}
.view.send .form-row--replacementStyle .form-label {
	display: none;
}
.view.send .form-row--feeRate .form-label,
.view.send .form-row--autoBroadcastDoubleSpendDelay .form-label {
	text-align: left;
	line-height: 1.5rem;
	padding-left: .8rem;
}
.view.send .secondary-control.double-spend .timer {
	position: absolute;
	left: 1.35rem;
}
.view.send .form-row-type--checkbox .form-field,
.view.send .form-row--feeRate .form-field,
.view.send .form-row--autoBroadcastDoubleSpendDelay .form-field {
	float: left;
	width: 25%;
}
.view.send .form-row-type--checkbox .form-label,
.view.send .form-row--feeRate .form-label,
.view.send .form-row--autoBroadcastDoubleSpendDelay .form-label {
	float: right;
	width: 75%;
}
.view.send input[name="feeRate"] {
	width: 100%;
	max-width: 3.75rem;
}
.view.send .form-row--feeRate .form-field-action {
	width: 1.5rem;
	height: 1.5rem;
	border-radius: 50%;
	padding: 0;
}

